--- a/cv-lab2/cv-lab2.ipynb
+++ b/cv-lab2/cv-lab2.ipynb
@@ -242,15 +242,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Displaying ‘red’, ‘green’ and ‘blue’ channels"
+    "## Bending Images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "I = cv2.imread('damavand.jpg')\n",
+    "J = cv2.imread('eram.jpg')\n",
+    "K = (0.8*I + 0.2*J).astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.8*I).dtype"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +294,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10], dtype=uint8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +315,7 @@
        "array([250, 250, 250, 250, 250, 250, 250, 250, 250, 250], dtype=uint8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
